--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,1 +1,19 @@
-<h1>Home</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Insta</title>
+</head>
+<body>
+    <h1>Home</h1>
+    
+    {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a href="{% url 'login' %}">Loguearse</a>
+    {% endif %}
+        
+    <h1>Hola {{user}}</h1>
+</body>
+</html>
