--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -6,7 +6,7 @@
     <title>Insta</title>
 </head>
 <body>
-    <h1>Home</h1>
+    <h1>Hola {{user}}</h1>
     
     {% if user.is_authenticated %}
         <a href="{% url 'logout' %}">Logout</a>
@@ -14,6 +14,18 @@
         <a href="{% url 'login' %}">Loguearse</a>
     {% endif %}
         
-    <h1>Hola {{user}}</h1>
+
+    <!--Esta seria la parte de las publicaciones de los usuarios-->
+    <h2>Publicaciones</h2>
+    <div>
+        <!--Acá iteramos todos los registros que hay en la base de datos de posts-->
+        {% for p in posts %}
+            <div>
+                <h3>{{p.descripcion}}</h3>
+                <h4>{{p.usuario.username}}</h4>
+            </div>
+        {% endfor %}
+            
+    </div>
 </body>
 </html>
