Agregar imagen a la publicación

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,8 +22,15 @@
         <!--Acá iteramos todos los registros que hay en la base de datos de posts-->
         {% for p in posts %}
             <div>
-                <h3>{{p.descripcion}}</h3>
+                
+                {% if p.imagen %}                
+                    <img src="{{p.imagen.url}}" alt="">
+                {% else %}
+                    <h1>No hay imagen</h1>
+                {% endif %}
+                    
                 <h4>{{p.usuario.username}}</h4>
+                <h3>{{p.descripcion}}</h3>
                 <a href="{% url 'posts:update_post' p.id %}">Editar</a>
                 <a href="{% url 'posts:delete_post' p.id %}">Eliminar</a>
             </div>
