--- a/src/templates/posts/crear_post.html
+++ b/src/templates/posts/crear_post.html
@@ -6,7 +6,7 @@
     <title>Insta</title>
 </head>
 <body>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Publicar</button>
