--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hola {{user}}</h1>
-    
+    <a href="{% url 'posts:crear_post' %}">crear post</a>
     {% if user.is_authenticated %}
         <a href="{% url 'logout' %}">Logout</a>
     {% else %}
@@ -34,7 +34,13 @@
                 <a href="{% url 'posts:update_post' p.id %}">Editar</a>
                 <a href="{% url 'posts:delete_post' p.id %}">Eliminar</a>
             </div>
-        {% endfor %}
+            
+                <form action="{% url 'comments:comment' p.id %}" method="POST">
+                    {% csrf_token %}
+                    <textarea name="comment" id="{{ p.id }}" name="pk"></textarea>
+                    <button type="submit">Comentar</button>
+                </form>
+            {% endfor %}
             
     </div>
 </body>
