--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -17,6 +17,7 @@
         <input type="password" id="password" name="password" required><br><br>
     
         <input type="submit" value="Iniciar Sesión">
+        <a href="{% url 'user:register' %}">Registrarse</a>
     </form>
 </body>
 </html>
