--- a/src/templates/dm/canal_detail.html
+++ b/src/templates/dm/canal_detail.html
@@ -12,27 +12,30 @@
         
 
         <h4>mensajes del canal</h4>
-        {% for mensaje in object.canalmensaje_set.all %}
+        <div id="contenedor_ms">
 
-            
-            {% if request.user == mensaje.usuario %}
-                <p>
-                    <span style="color: red;">
-                        Lo envie yo:
-                    </span>
-                    {{mensaje.texto}}
-                </p>
-            {% else %}
-                <p style="color: red;">
-                    {{mensaje.usuario}}:
-                    <span style="color: black;">
-                        {{mensaje.texto}}
-                    </span>
-                </p>
-            {% endif %}
+        
+            {% for mensaje in object.canalmensaje_set.all %}
+
                 
-        {% endfor %}
-            
+                {% if request.user == mensaje.usuario %}
+                    <p>
+                        <span style="color: red;">
+                            Lo envie yo:
+                        </span>
+                        {{mensaje.texto}}
+                    </p>
+                {% else %}
+                    <p style="color: red;">
+                        {{mensaje.usuario}}:
+                        <span style="color: black;">
+                            {{mensaje.texto}}
+                        </span>
+                    </p>
+                {% endif %}
+                    
+            {% endfor %}
+        </div>
     
     
         <h4>Usuarios del canal</h4>
@@ -44,7 +47,7 @@
         {% endfor %}
             
 
-    <form action="{{request.path}}" method="POST">
+    <form id='form_submit' action="{{request.path}}" method="POST">
         {% csrf_token %}
 
         {{form.as_p}}
@@ -52,5 +55,50 @@
     </form>
 
     </main>
+
+
+    <script>
+
+        const MsgForm = document.getElementById("form_submit")
+        const msgContainer = document.getElementById("contenedor_ms")
+        MsgForm.addEventListener("submit", (event) => {
+            event.preventDefault()
+
+            const targetDate = event.target
+            const formData = new FormData(targetDate)
+
+            const xhr = new XMLHttpRequest()
+
+            const endpoint = MsgForm.getAttribute("action")
+            const method = MsgForm.getAttribute("method")
+            xhr.open(method, endpoint)
+
+            xhr.responseType = 'json'
+            xhr.setRequestHeader("HTTP_X_REQUESTED_WITH", "XMLHttpRequest")
+            xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest")
+
+            xhr.onload = () => {
+                console.log(xhr.status, xhr.response)
+
+                if(xhr.status === 201){
+                    const respuestaData = xhr.response
+                    let actualMensajeHtml = msgContainer.innerHTML
+                    actualMensajeHtml += `<div class=''><b>${respuestaData.username}</b><p>${respuestaData.mensaje}</p></div>`
+                    
+                    msgContainer.innerHTML = actualMensajeHtml
+                    MsgForm.reset()
+                }else if(xhr.status === 400){
+                    console.log(xhr.response)
+                }else{
+                    alert("Un error ocurrio.")
+                }
+            }
+            xhr.send(formData)
+        })
+
+
+
+
+    </script>
 </body>
 </html>
