--- a/src/templates/usuarios/profile.html
+++ b/src/templates/usuarios/profile.html
@@ -1,45 +1,75 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insta</title>
-</head>
+    <link rel="stylesheet" href="{% static 'css/profile.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  </head>
 <body>
-    <h1>Perfil de usuario de {{user.username}}</h1>
-    {% if request.user.is_authenticated %}
+    <main class="contenedor-instagram-profile-usuario">
       
-      {% if user.username != request.user.username %}
-        {% if user not in request.user.following %}
-          {{request.user.username}} Queres seguir a {{user.username}}
-          <a href="{% url 'user:follow' user %}">Follow</a>
-        {% else %}
-          <a href="{% url 'user:unfollow' user %}">UnFollow</a>
-        {% endif %}  
+      <section class="contenedor-botones-interaccion-profile">
 
-      {% endif %}
+        <article class="botones-interaccion-profile">
+          <div class="botones-interaccion">
+            <i class="fa-solid fa-house"></i>
+            <h1>Inicio</h1>
+          </div>
+        </article>
         
-    {% endif %}
+
+        <article class="botones-interaccion-profile">
+          <div class="botones-interaccion">
+            <i class="fa-solid fa-house"></i>
+            <h1>Buscar</h1>
+          </div>
+        </article>
+
+
+        <article class="botones-interaccion-profile">
+          <div class="botones-interaccion">
+            <i class="fa-solid fa-house"></i>
+            <h1>Mensajes</h1>
+          </div>
+        </article>
+
+        <article class="botones-interaccion-profile">
+          <div class="botones-interaccion">
+            <i class="fa-solid fa-house"></i>
+            <h1>Notificaciones</h1>
+          </div>
+        </article>
+
+        <article class="botones-interaccion-profile">
+          <div class="botones-interaccion">
+            <i class="fa-solid fa-house"></i>
+            <h1>Crear</h1>
+          </div>
+        </article>
+
+        <article class="botones-interaccion-profile">
+          <div class="botones-interaccion">
+            <i class="fa-solid fa-house"></i>
+            <h1>Perfil</h1>
+          </div>
+        </article>
+
+        
+      </section>
       
-
-    <h5>Followers</h5>
-    <p>{{user.followers.count}}</p>
-
-    <h5>Following</h5>
-    <p>{{user.following.count}}</p>
-
-    <ul>
-        {% for post in posts %}
-
-        <img src="{{post.imagen.url}}" alt="">
-          <li>
-            {{ post.descripcion }}<br>
-            Autor: {{ post.usuario.username }}
-          </li>
-        {% empty %}
-          <li>No hay publicaciones aún.</li>
-        {% endfor %}
-      </ul>
-
+      
+      <!---->
+      <section class="contenedor-profile-usuario">
+        <h1>hola, soy la seccion 2</h1>
+        <h1>lorem1000</h1>
+      </section>
+    </main>
 </body>
 </html>
