--- a/src/templates/usuarios/profile.html
+++ b/src/templates/usuarios/profile.html
@@ -27,7 +27,7 @@
 
         <article class="botones-interaccion-profile">
           <div class="botones-interaccion">
-            <i class="fa-solid fa-house"></i>
+            <i class="fa-solid fa-magnifying-glass"></i>
             <h1>Buscar</h1>
           </div>
         </article>
@@ -35,28 +35,28 @@
 
         <article class="botones-interaccion-profile">
           <div class="botones-interaccion">
-            <i class="fa-solid fa-house"></i>
+            <i class="fa-solid fa-message"></i>
             <h1>Mensajes</h1>
           </div>
         </article>
 
         <article class="botones-interaccion-profile">
           <div class="botones-interaccion">
-            <i class="fa-solid fa-house"></i>
+            <i class="fa-solid fa-bell"></i>
             <h1>Notificaciones</h1>
           </div>
         </article>
 
         <article class="botones-interaccion-profile">
           <div class="botones-interaccion">
-            <i class="fa-solid fa-house"></i>
+            <i class="fa-solid fa-square-plus"></i>
             <h1>Crear</h1>
           </div>
         </article>
 
         <article class="botones-interaccion-profile">
           <div class="botones-interaccion">
-            <i class="fa-solid fa-house"></i>
+            <i class="fa-solid fa-user"></i>
             <h1>Perfil</h1>
           </div>
         </article>
@@ -67,8 +67,65 @@
       
       <!---->
       <section class="contenedor-profile-usuario">
-        <h1>hola, soy la seccion 2</h1>
-        <h1>lorem1000</h1>
+        <!---->
+        <article class="contenedor-informacion-profile-usuario">
+          <div class="contenedor-imagen-perfil-usuario">
+            <h1 class="imagen-perfil-usuario">Imagen de perfil</h1>
+          </div>
+
+          <div class="contenedor-informacion-usuario">
+            <!---->
+            <div class="contenedor-seccion-perfil-usuario">
+
+              <div class="contenedor-nombre-del-usuario">
+                <h1 class="nombre-del-usuario">David Forastier</h1>
+              </div>
+
+              <div class="contenedor-boton-editar-perfil">
+                <button class="boton-editar-perfil">Editar Perfil</button>
+              </div>
+
+              <div class="contenedor-boton-ver-archivo">
+                <button class="boton-ver-archivo">Ver archivo</button>
+              </div>
+
+              <div class="contenedor-boton-settings">
+                <i class="fa-solid fa-gear"></i>
+              </div>
+            </div>
+            
+            <!---->
+            <div class="contenedor-informacion-seguidores-seguidos">
+              <div class="contenedor-contador-publicaciones">
+                <h1><span>9</span> publicaciones</h1>
+              </div>
+
+              <div class="contenedor-seguidores">
+                <h1><span>12</span> seguidores</h1>
+              </div>
+              
+              <div class="contenedor-seguidos">
+                <h1><span>2018</span> seguidos</h1>
+              </div>
+            </div>
+            
+            <!---->
+            <div class="contenedor-descripcion-del-usuario">
+              <div>
+                <p class="descripcion-del-usuario">
+                  lorem1000
+                </p>
+              </div>
+            </div>
+          </div>
+        </article>
+        
+        <!---->
+        <article>
+          <div>
+            <img src="{% static 'img/messi.jpg' %}" alt="">
+          </div>
+        </article>
       </section>
     </main>
 </body>
