--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,23 +1,78 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <title>Insta</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Workbench&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Workbench&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Login</h1>
-    
-    <form action="" method="POST">
-        {% csrf_token %}
-        <label for="username">Usuario:</label>
-        <input type="text" id="username" name="username" required><br><br>
-    
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required><br><br>
-    
-        <input type="submit" value="Iniciar Sesión">
-        <a href="{% url 'user:register' %}">Registrarse</a>
-    </form>
+    <main class="contenedor-login-insta">
+        <!---->
+        <section class="contenedor-login">
+            <!---->
+            <article class="contenedor-imagen-login">
+                <img class="imagen-login" src="{% static 'img/messi.jpg' %}" alt="">
+            </article>
+            <!---->
+            <article class="contenedor-formulario-login-insta">
+                <div class="contenedor-titulo-login-insta">
+                    <h1 class="titulo-login-insta">Insta</h1>
+                </div>
+
+
+                <!--Formulario-->
+                <div class="contenedor-formulario-login">
+                    
+                    <form class="formulario-login" action="" method="POST">
+                        {% csrf_token %}
+
+                        <div class="contenedor-input-label">
+                            <input class="input-login" type="text" id="username" name="username" required>
+
+                            <label class="label-login" for="username">Usuario:</label>
+                        </div>
+                        <div class="contenedor-input-label">
+                            <input class="input-login" type="password" id="password" name="password" required><br><br>
+
+                            <label class="label-login" for="password">Contraseña:</label>
+                        </div>
+                    
+                        <div class="contenedor-boton-iniciar-sesion">
+                            <button class="boton-iniciar-sesion" type="submit">Iniciar sesión</button>
+                        </div>
+
+                        <div class="contenedor-redirecciones-login">
+                            <div class="contenedor-login-facebook">
+                                <i class="fa-brands fa-facebook"></i>
+                                <a class="login-facebook" href="">Iniciar sesión con Facebook</a>
+                            </div>
+
+                            <div class="contenedor-olvidaste-contraseña">
+
+                                <a class="olvidaste-contraseña" href="">¿Olvidaste tu contraseña?</a>
+                            </div>
+                        </div>
+
+                    </form>
+                </div>
+
+
+                <!---->
+                
+                <div class="contenedor-registrate">
+                    <p class="crear-cuenta">¿No tienes cuenta? <a href="{% url 'user:register' %}" class="registrate">Regístrate</a></p>
+                </div>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
